--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,6 +35,23 @@ jobs:
         run: |-
           npm run docs:build
           > docs/.vuepress/dist/.nojekyll
+          rm -rf docs/.vuepress/dist/intro.html
+          rm -rf docs/.vuepress/dist/slide.html
+          rm -rf docs/.vuepress/dist/home.html
+          rm -rf docs/.vuepress/dist/timeline/
+          rm -rf docs/.vuepress/dist/category/
+          rm -rf docs/.vuepress/dist/star/
+          rm -rf docs/.vuepress/dist/slide/
+          rm -rf docs/.vuepress/dist/encrypted/
+          rm -rf docs/.vuepress/dist/article/
+          rm -rf docs/.vuepress/dist/tag/
+          rm -rf docs/.vuepress/dist/zh/timeline/
+          rm -rf docs/.vuepress/dist/zh/category/
+          rm -rf docs/.vuepress/dist/zh/star/
+          rm -rf docs/.vuepress/dist/zh/slide/
+          rm -rf docs/.vuepress/dist/zh/encrypted/
+          rm -rf docs/.vuepress/dist/zh/article/
+          rm -rf docs/.vuepress/dist/zh/tag/
 
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
