--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -33,25 +33,26 @@ jobs:
         env:
           NODE_OPTIONS: --max_old_space_size=8192
         run: |-
-          npm run docs:build
-          > docs/.vuepress/dist/.nojekyll
-          rm -rf docs/.vuepress/dist/intro.html
-          rm -rf docs/.vuepress/dist/slide.html
-          rm -rf docs/.vuepress/dist/home.html
-          rm -rf docs/.vuepress/dist/timeline/
-          rm -rf docs/.vuepress/dist/category/
-          rm -rf docs/.vuepress/dist/star/
-          rm -rf docs/.vuepress/dist/slide/
-          rm -rf docs/.vuepress/dist/encrypted/
-          rm -rf docs/.vuepress/dist/article/
-          rm -rf docs/.vuepress/dist/tag/
-          rm -rf docs/.vuepress/dist/zh/timeline/
-          rm -rf docs/.vuepress/dist/zh/category/
-          rm -rf docs/.vuepress/dist/zh/star/
-          rm -rf docs/.vuepress/dist/zh/slide/
-          rm -rf docs/.vuepress/dist/zh/encrypted/
-          rm -rf docs/.vuepress/dist/zh/article/
-          rm -rf docs/.vuepress/dist/zh/tag/
+          sh build.sh
+          # npm run docs:build
+          # > docs/.vuepress/dist/.nojekyll
+          # rm -rf docs/.vuepress/dist/intro.html
+          # rm -rf docs/.vuepress/dist/slide.html
+          # rm -rf docs/.vuepress/dist/home.html
+          # rm -rf docs/.vuepress/dist/timeline/
+          # rm -rf docs/.vuepress/dist/category/
+          # rm -rf docs/.vuepress/dist/star/
+          # rm -rf docs/.vuepress/dist/slide/
+          # rm -rf docs/.vuepress/dist/encrypted/
+          # rm -rf docs/.vuepress/dist/article/
+          # rm -rf docs/.vuepress/dist/tag/
+          # rm -rf docs/.vuepress/dist/zh/timeline/
+          # rm -rf docs/.vuepress/dist/zh/category/
+          # rm -rf docs/.vuepress/dist/zh/star/
+          # rm -rf docs/.vuepress/dist/zh/slide/
+          # rm -rf docs/.vuepress/dist/zh/encrypted/
+          # rm -rf docs/.vuepress/dist/zh/article/
+          # rm -rf docs/.vuepress/dist/zh/tag/
 
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
@@ -60,15 +61,15 @@ jobs:
           branch: gh-pages
           folder: docs/.vuepress/dist
           
-      # 查看 workflow 的文档来获取更多信息
-      # @see https://github.com/crazy-max/ghaction-github-pages
-      - name: 部署到GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2
-        with:
-          # 部署到 gh-pages 分支
-          target_branch: gh-pages
-          # 部署目录为 VuePress 的默认输出目录
-          build_dir: docs/.vuepress/dist
-        env:
-          # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # # 查看 workflow 的文档来获取更多信息
+      # # @see https://github.com/crazy-max/ghaction-github-pages
+      # - name: 部署到GitHub Pages
+      #   uses: crazy-max/ghaction-github-pages@v2
+      #   with:
+      #     # 部署到 gh-pages 分支
+      #     target_branch: gh-pages
+      #     # 部署目录为 VuePress 的默认输出目录
+      #     build_dir: docs/.vuepress/dist
+      #   env:
+      #     # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
