--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm ci
 
       # 运行构建脚本
-      - name: Build VuePress site
+      - name: 运行构建脚本
         run: #npm run docs:build
              sh build.sh
 
