--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
         with:
           # “最近更新时间” 等 git 日志相关信息，需要拉取全部提交记录
           fetch-depth: 0
@@ -26,39 +26,23 @@ jobs:
           node-version: 18
           cache: npm
 
-      - name: vuepress-deploy
-        uses: jenkey2011/vuepress-deploy@master
+      - name: 安装依赖
+        run: npm ci
+
+      # 运行构建脚本
+      - name: 运行构建脚本
+        run: #npm run docs:build
+             sh build.sh
+
+      # 查看 workflow 的文档来获取更多信息
+      # @see https://github.com/crazy-max/ghaction-github-pages
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          # 部署到 gh-pages 分支
+          target_branch: gh-pages
+          # 部署目录为 VuePress 的默认输出目录
+          build_dir: docs/.vuepress/dist
         env:
-          ACCESS_TOKEN: ${{ secrets.VUEPRESS_TOKEN }}
-          TARGET_REPO: firstheart01/zq-homepage
-          TARGET_BRANCH: gh-pages
-          BUILD_SCRIPT: npm ci && npm run docs:build
-          BUILD_DIR: docs/.vuepress/dist
-
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     # 选择要使用的 node 版本
-      #     node-version: 18
-      #     cache: npm
-
-      # - name: 安装依赖
-      #   run: npm ci
-
-      # # 运行构建脚本
-      # - name: 运行构建脚本
-      #   run: #npm run docs:build
-      #        sh build.sh
-
-      # # 查看 workflow 的文档来获取更多信息
-      # # @see https://github.com/crazy-max/ghaction-github-pages
-      # - name: Deploy to GitHub Pages
-      #   uses: crazy-max/ghaction-github-pages@v2
-      #   with:
-      #     # 部署到 gh-pages 分支
-      #     target_branch: gh-pages
-      #     # 部署目录为 VuePress 的默认输出目录
-      #     build_dir: docs/.vuepress/dist
-      #   env:
-      #     # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
-      #     GITHUB_TOKEN: ${{ secrets.Vuepress_Token}}
+          # @see https://docs.github.com/cn/actions/reference/authentication-in-a-workflow#about-the-github_token-secret
+          GITHUB_TOKEN: ${{ secrets.Vuepress_Token}}
